gcc/testsuite/algol68/compile/error-nested-comment-1.a68
{ The string in nested comment is in one logical line.  }
begin
      { puts ("{'n { dg-error {} }
"); { this prints foo }}
      skip
end
